2.2.13

 *) [WIN32] Don't set the OVERLAPPED_IO flag on NamedPipe listen HANDLEs - 
    setting it was just plain broken.

 *) [WIN32] Fix the accept mutex - all applications were sharing one!? 

 *) Fix 'FastCgiConfig -autoUpdate'.

 *) Fix 'FastCgiConfig -flush'.

 *) Prevent silly maxProcesses and processSlack combinations.
    Dmitry Dorofeev [dima@yasp.com]
                                                               
 *) Properly handle the killing of idle processes when one takes a long time
    to exit once signaled down (or the config is funky).
    Dmitry Dorofeev [dima@yasp.com]

 *) Always kill the youngest instance of an application.  Suggested by 
    Dmitry Dorofeev [dima@yasp.com]

2.2.12

 *) Delay the logging of write errors to the pm to account for shutdown/restart.

 *) (Win32) An assortment of fixes.

 *) Fix some broken casts that were likely the cause of an assert.

 *) Win32. Eliminate forward slashes from the named pipe path name.
    Gerald Richter [richter@ecos.de]

 *) SIGUSR2 is no longer blocked in the process manager and the fastcgi 
    applications it spawns. [ryans@amazon.com]

 *) Added support for the -flush argument to FastCgiConfig. 
    Eric Sit [esit@alum.mit.edu]

 *) Change the "which call to module_init() is this" check to a more
    reliable approach.  Doru Petrescu [pdoru@kappa.ro]

 *) Close the old pipe file descriptor in apache main on USR1/HUP 
    (elimnates a small leak).  James E. Jurach Jr. jjurach@fundsxpress.com

 *) Fix a bug in fcgi_config_set_authoritative_slot(). Tetsuya Furukawa
    [tetsuya@secom-sis.co.jp]

 *) Eliminate the use of locks to assist in the clean shutdown of
    applications.  Instead, it is assumed that applications handle
    termination signals properly (this is now embedded in the C
    application lib).

 *) Fix Win32 process termination.  Proper operation requires the use of
    an updated application lib (termination is now signalled with an