@@ -1,5 +1,12 @@
 2.2.13
 
+ *) [WIN32] Add (back) support for use of TerminateProcess() to accomodate
+    applications that do not (properly) support the shutdown event (this
+    feature was introduced in fcgi2 2.2.2 and improved in 2.2.4).  The 
+    new macro WIN32_SHUTDOWN_GRACEFUL_WAIT in mod_fastcgi.h conrols the 
+    interval between signaling a proper shutdown and wacking the process(s)
+    with a TerminateProcess().
+
  *) [WIN32] Don't set the OVERLAPPED_IO flag on NamedPipe listen HANDLEs - 
     setting it was just plain broken.
 
